Changes in responsitivity

--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -12,6 +12,55 @@
   	</head>
 
   	<body>
+      <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
+          </div>
+          <div class="col-1of4">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
+          </div>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
+      <div id="mobile" class="grid">
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="mobile"class="header">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -44,19 +93,22 @@
   			</nav>
   		</header>
 
-  		<article id="content">
+  		<article id="content4">
   			<div class="grid">
   			<div class="col-1of5">
-  				<a class="sideonpage" href="choosenoodle.html">Step 1:<br>Choose Noodle</a>
+          <a id="mobiledonebutton1" class="side" href="choosenoodle.html">Step 1:<br>Rice Noodle<br>$2.00</a>
+
+  				<a id="mobiledonebutton2" class="sideonpage" href="choosenoodle.html">Step 1:<br>Choose Noodle</a>
           		<a id="selectside2"class="sideNone" href="">Step 2:<br>Choose Toppings</a>
           		<a class="sideNone" href="">Step 3:<br>Choose Soup</a>
-          		<a class="sideNone" href="">Done & Review</a>
+              <a id="mobiledonebutton1" class="sideNone" href="">Done <br>&<br> Review</a>
+          		<a id="mobiledonebutton2" class="sideNone" href="">Done & Review</a>
   			</div>
 
   			<div class="col-4of5">
           <article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR NOODLE</h1>
-  					<div class="col-1of3">
+  					<div id="createnood"class="col-1of3">
               <img id ="unselected" class="menu" src="img/noodle_egg.jpg" width="210" height="150">
               <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
@@ -65,7 +117,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/noodle_thick.jpg" width="210" heigh="150">
   						<p class="cartNrow">Thick Noodle</p>
   						<p class="cartProw">$2.00</p>
@@ -74,7 +126,7 @@
               <a class="prodcomment" href="">10 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/noodle_thin.jpg" width="210" heigh="150">
               <p class="cartNrow">Thin Noodle</p>
               <p class="cartProw">$2.00</p>
@@ -83,7 +135,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/noodle_rice.jpg" width="210" heigh="150">
               <p class="cartNrow">Rice Noodle</p>
               <p class="cartProw">$2.00</p>
@@ -92,7 +144,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/noodle_instant.jpg" width="210" heigh="150">
               <p class="cartNrow">Instant Noodle</p>
               <p class="cartProw">$2.00</p>
@@ -101,7 +153,7 @@
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/noodle_udon.jpg" width="210" heigh="150">
               <p class="cartNrow">Undo</p>
               <p class="cartProw">$2.00</p>
