--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -12,6 +12,55 @@
   	</head>
 
   	<body>
+            <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
+          </div>
+          <div class="col-1of4">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
+          </div>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
+      <div id="mobile" class="grid">
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="mobile"class="header">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -44,19 +93,24 @@
   			</nav>
   		</header>
 
-  		<article id="content">
+  		<article id="content4">
   			<div class="grid">
   			<div class="col-1of5">
-  				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2.00)</a>
-      		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Pig's Blood - $1.50)</a>
+          <a id="mobiledonebutton1" class="side" href="choosenoodle.html">Step 1:<br>Rice Noodle<br>$2.00</a>
+  				<a id="mobiledonebutton2" class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2.00)</a>
+
+          <a id="mobiledonebutton1" class="side" href="choosetoppings.html">Step 2:<br>Pig's Blood<br>$1.50</a>
+      		<a id="mobiledonebutton2" class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Pig's Blood - $1.50)</a>
       		<a class="sideonpage" href="choosesoup.html">Step 3:<br>Choose Soup</a>
-      		<a id="selectside4" class="sideNone" href="">Done & Review</a>
+
+          <a id="selectside4" class="sideNone" href="">Done <br>&<br> Review</a>
+      		<a id="selectside5" class="sideNone" href="">Done & Review</a>
   			</div>
 
   			<div class="col-4of5">
   				<article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR SOUP</h1>
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img id ="unselected" class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
               <p class="cartNrow">Chicken Soup</p>
               <p class="cartProw">$2.00</p>
@@ -65,7 +119,7 @@
               <a class="prodcomment" href="">18 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
               <p class="cartNrow">Spicy Seafood Soup</p>
               <p class="cartProw">$2.00</p>
@@ -74,7 +128,7 @@
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/soup_superspicy.jpg" width="210" heigh="150">
               <p class="cartNrow">Super Spicy Soup</p>
               <p class="cartProw">$2.00</p>
@@ -83,7 +137,7 @@
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/soup_tomato.jpg" width="210" heigh="150">
               <p class="cartNrow">Tomato Soup</p>
               <p class="cartProw">$2.00</p>
@@ -92,7 +146,7 @@
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
-            <div class="col-1of3">
+            <div id="createnood" class="col-1of3">
               <img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
               <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
@@ -101,7 +155,7 @@
               <a class="prodcomment" href="">20 Comments</a>
             </div>
 
-  					<div class="col-1of3">
+  					<div id="createnood" class="col-1of3">
   						<img class="menu"src="img/soup_medicine.jpg" width="210" heigh="150">
               <p class="cartNrow">Wolfberries Soup</p>
               <p class="cartProw">$2.00</p>
