--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -12,6 +12,55 @@
   	</head>
 
   	<body>
+      <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
+          </div>
+          <div class="col-1of4">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
+          </div>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
+      <div id="mobile" class="grid">
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="mobile"class="header">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -47,7 +96,7 @@
       <article id="content">
   		<div class="grid">
         <div class="col-1of5">
-          <h1 class="cartpage">STORES</h1>
+          <h1 class="contact">STORES</h1>
         </div>
 
   			<div id="store" class="col-4of5">
@@ -57,7 +106,7 @@
           </div>
 
           <div class="col-1of2">
-            <p class="cartNrow">ORIGINAL NOOD RESTAURANT - JOYCE</p>
+            <p class="contactH">ORIGINAL NOOD RESTAURANT - JOYCE</p>
             <p class="contact">Address :<br>3318 Kingsway, Vancouver, BC V5R 5L1<br><br>Phone : (604) 123-3344<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
             <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
@@ -71,7 +120,7 @@
           </div>
 
           <div class="col-1of2" id="secondstore">
-            <p class="cartNrow">NEW! NOOD RESTAURANT - DOWNTOWN</p>
+            <p class="contactH">NEW! NOOD RESTAURANT - DOWNTOWN</p>
             <p class="contact">Address :<br>527 Robson St, Vancouver, British Columbia V6B 2B7<br><br>Phone : (604) 123-4455<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
             <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
@@ -80,5 +129,7 @@
 
       </div>
     </article>
+    <script src="js/jquery.js"></script>
+    <script src="js/ui.js"></script>
   	</body>
 </html>
