--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -12,21 +12,55 @@
   	</head>
 
   	<body>
-      <div id="mobile" class="grid">
-        <nav id ="mobile"class="header">
-          <div class="col-oneoffive">
-            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+
+      <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="menu.html">MENU</a></p>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
           </div>
-          <div class="col-twooffive">
+          <div class="col-1of4">
             <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="cart.html">MY CART</a></p>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
           </div>
-        </nav>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
+      <div id="mobile" class="grid">
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="mobile"class="header">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
       </div>
   		<header class="grid">
   			<div class="col-6of24">
