--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -13,21 +13,53 @@
   	</head>
 
   	<body>
+      <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
+          </div>
+          <div class="col-1of4">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
+          </div>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
       <div id="mobile" class="grid">
           <div class="col-twoofseven">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
 
           <nav id ="mobile"class="header">
-          <div class="col-twoofseven">
-            <p><a href="menu.html">FOOD MENU</a></p>
-          </div>
-          <div class="col-twoofseven">
-            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
-          </div>
-          <div class="col-oneofseven">
             <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
-          </div>
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
 
@@ -80,7 +112,7 @@
             </div>
     			</div>
 
-    			<div class="col-1of3">
+    			<div id ="homeside"class="col-1of3">
             <div class="rowGlobalsideimage">
               <a href="index.html"><p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
 
@@ -141,5 +173,8 @@
     			</div>
   		  </div>
     </article>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/ui.js"></script>
   	</body>
 </html>
