--- a/Week5_Grids/index2.html
+++ b/Week5_Grids/index2.html
@@ -30,6 +30,16 @@
           </div>
         </nav>   
       </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
 
   		<header class="grid">
   			<div class="col-6of24">
@@ -135,5 +145,7 @@
     			</div>
   		  </div>
     </article>
+    <script src="js/jquery.js"></script>
+    <script src="js/ui.js"></script>
   	</body>
 </html>
