--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -12,21 +12,54 @@
   	</head>
 
   	<body>
-      <div id="mobile" class="grid">
-        <nav id ="mobile"class="header">
-          <div class="col-oneoffive">
-            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+      <div id="tablet" class="grid">
+          <div class="col-1of4">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="menu.html">MENU</a></p>
+
+          <nav id ="tablet"class="header">
+          <div class="col-1of4">
+            <p><a href="menu.html">FOOD MENU</a></p>
           </div>
-          <div class="col-twooffive">
+          <div class="col-1of4">
             <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="cart.html">MY CART</a></p>
+          <div class="col-1of4">
+            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
           </div>
-        </nav>
+        </nav>   
+      </div>
+      <div id="tablet2" class="grid">
+
+        <nav id ="tablet2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
+      </div>
+
+      <div id="mobile" class="grid">
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
+          </div>
+
+          <nav id ="mobile"class="header">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+        </nav>   
+      </div>
+      <div id="mobile2" class="grid">
+
+        <nav id ="mobile2"class="header">
+            <p><a href="about.html">ABOUT</a></p>
+            <p><a href="news.html">NEWS</a></p>
+            <p><a href="menu.html">MENU</a></p>
+            <p><a href="choosenoodle.html">CREATE NOODLE</a></p>
+            <p><a href="contact.html">CONTACT</a></p>
+            <p><a href="cart.html">MY CART</a></p>
+            <p><a href="login.html">LOG IN</a></p>
+        </nav>   
       </div>
   		<header class="grid">
   			<div class="col-6of24">
@@ -63,12 +96,13 @@
       <article id="content">
   		<div class="grid">
   			<div class="col-1of5">
-          <a id ="newsmobile" class="side" href="#news">New Product</a>
-          <a id ="newsmobile" class="side" href="#promotion">Promotions</a>
-          <a id ="newsmobile" class="side" href="#events">Events</a>
+          <a id ="newsmobileN" class="side" href="#news">New Product</a>
+          <a id ="newsmobileP" class="side" href="#promotion">Promotions</a>
+          <a id ="newsmobileE" class="side" href="#events">Events</a>
   			</div>
 
   			<div class="col-4of5">
+
   				<article id="news">
           <h1 class="global">NEW PRODUCT</h1>
              <img id ="newP" class="news" src="img/newproduct.jpg" width="300">
@@ -94,5 +128,8 @@
 
   		</div>
       </article>
+      <script src="js/jquery.js"></script>
+      <script src="js/ui.js"></script>
+      <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
   	</body>
 </html>
