--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -131,7 +131,7 @@
     			<div class="col-oneof5">
             <!-- <a href="detailview.html"><img class="homebottom"src="img/nood1.jpg" width="170" height="170"></a> -->
             <div class="view-first">  
-                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170"/>
+                 <img class="homebottom"src="img/nood1.jpg" width="170" height="170">
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
